# alpha-analyzer

./: .gitignore  ALPHA_POSITION_CONCEPT.md  CHECKER_DEV_GUIDE.md  DATA_GENERATION_RULES.md  PROJECT_MOTIVATION.md  README.md  SYSTEM_DESIGN.md  SYSTEM_UNDERSTANDING.md  TARGET_SYSTEM_ANALYSIS.md  analyzer.py  base_analyzer.py  base_checker.py  config.yaml  create_framework_diagram.py  csv_format.md  generate_sample_data.py  generate_simple_test_data.py  generate_test_data.py  main.py  pyproject.toml  reporter.py  test_checkers.py
analyzers/: __init__.py  fill_rate_analyzer.py  interactive_fill_rate_analyzer.py
checkers/: __init__.py  alpha_sum_consistency.py  direction_consistency_checker.py  merge_engine_checker.py  non_negative_trader.py  pm_constraint_checker.py  volume_rounding.py
final_pressure_test/: InCheckAlphaEv.csv  MarketDataEv.csv  MergedAlphaEv.csv  SplitAlphaEv.csv
production_data/: InCheckAlphaEv.csv  MarketDataEv.csv  MergedAlphaEv.csv  PMVirtualPosEv.csv  PMVirtualPosEv_violation.csv  SplitAlphaEv.csv  SplitAlphaEv_with_issues.csv  SplitCtxEv.csv  VposResEv.csv
sample_data/: InCheckAlphaEv.csv  IncheckAlphaEv.csv  IncheckAlphaEv_rounded.csv  MarketDataEv.csv  MergedAlphaEv.csv  RealtimePosEv.csv  SplitAlphaEv.csv  SplitAlphaEv_backup.csv  SplitCtxEv.csv  VposResEv.csv
sample_data_rounded/: RealtimePosEv.csv  SplitAlphaEv.csv
