[project]
name = "alpha-analyzer"
version = "2.0.0"
description = "Alpha Analyzer Framework for trading signal validation and analysis"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]